feat(command): enhance CommandContext and CommandRegistry with new methods and validation
- Added asPlayer() method in CommandContext to convert CommandSender to Player, returning null if not applicable.
- Introduced args() method in CommandContext to retrieve command arguments as a String array.
- Improved CommandRegistry to handle empty aliases and provide clearer error messages for command and alias conflicts.
- Updated PaperCommandExecutor to suggest subcommands only when available and log command execution errors more effectively.
- Refactored CommandInput to create an immutable list of arguments, preventing external modifications.